--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Barrio&family=Comic+Neue:wght@300&family=Happy+Monkey&family=Limelight&family=Nova+Flat&family=Poppins:ital,wght@0,300;0,600;0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Barrio&family=Baumans&family=Big+Shoulders+Text:wght@100&family=Bowlby+One&family=Comic+Neue:wght@300&family=Happy+Monkey&family=Kelly+Slab&family=League+Spartan:wght@100;500;700;800;900&family=Limelight&family=Londrina+Shadow&family=Megrim&family=Nova+Flat&family=Poppins:ital,wght@0,300;0,600;0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=VT323&display=swap');
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Megrim', cursive; */
+    /* font-family: 'Big Shoulders Text', cursive; */
+    font-family: 'League Spartan', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,6 +22,40 @@ body {
     width: 100%;
     max-width: 420px;
     margin: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        padding: 1.5em;
+        /* max-width: 400px; */
+        /* margin: 0.7em; */
+        margin-left: 90%;
+        margin-right: 39%;
+        /* padding-left: 2em; */
+        /* padding-right: 4.2em; */
+        width: 100%;
+    }
+    h1.temp {
+        width: 185px;
+        margin-left: 15px;
+        padding-right: 0%;
+        margin-right: 0%;
+        margin-bottom: 0.4em;
+        font-weight: 800;
+        flex-direction: row;
+        /* display: flex; */
+        font-size: 2em;
+        position: relative;
+        justify-content: center;
+    }
+    .tooltip.description {
+        width: 70px;
+        padding: 0;
+        /* margin-left: 245px; */
+        margin-right: 90px;
+        justify-content: center;
+        z-index: 1;
+    } 
 }
 
 .search {
@@ -64,8 +100,15 @@ input.search-bar:hover {
 }
 
 h1.temp {
-    margin: 0;
+    /* margin: 0; */
+    margin-left: 45%;
+    /* margin-right: 45%; */
     margin-bottom: 0.4em;
+    font-weight: 800;
+    display: flex;
+    font-size: 4em;
+    position: absolute;
+    justify-content: right;
 }
 
 .description {
@@ -92,3 +135,32 @@ h1.temp {
     left: 21px;
     top: 0;
 }
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    /* border-bottom: 1px dotted black; */
+  }
+  
+  .tooltip .description {
+    visibility: hidden;
+    width: 120px;
+    background-color: rgba(0, 0, 0, 0.567);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    justify-content: space-around;
+    margin-left: 280px;
+    margin-right: 80px;
+  
+    /* Position the tooltip */
+    position: relative;
+    z-index: 1;
+    /* display: flex; */
+  }
+  
+  .tooltip:hover .description {
+    visibility: visible;
+  }
