--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ body {
 }
 
 .card {
-    background: #00000099;
+    background: #afaaaa70;
     padding: 2em;
+    backdrop-filter: blur(5px);
     color: aliceblue;
     border-radius: 20px;
     width: 100%;
@@ -72,7 +73,7 @@ button {
     height: 44px;
     outline: none;
     padding-top: 4.5px;
-    background-color: #7c7c7c2b;
+    background-color: #7c7c7c76;
     color: #fff;
     cursor: pointer;
     transition: 0.2s ease-in-out;
@@ -85,9 +86,9 @@ button:hover {
 input.search-bar {
     border: none;
     outline: none;
-    padding: 0.4em 1em;
+    padding: 0.5em 1em;
     border-radius: 24px;
-    background-color: #7c7c7c2b;
+    background-color: #7c7c7c76;
     color: #fff;
     font-family: inherit;
     font-size: 105%;
@@ -97,6 +98,10 @@ input.search-bar {
 
 input.search-bar:hover {
     background: #7c7c7c6b;
+}
+
+input.search-bar::placeholder {
+    color: aliceblue;
 }
 
 h1.temp {
